--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"/>
+    <link rel="stylesheet" href="./assets/style.css" />
+    <title>Weather Dashboard</title>
 </head>
-
-    <body>
-      <header>
+<body>
+    <header>
         <h1>Weather Dashboard</h1>
-      </header>
-      <main class="container">
+    </header>
+    <main class="container">
         <div class="row">
-          <div class="col-sm-3">
-            <h4 class="searchCityHeader">Search for a City:</h4>
-            <form class="input-group mb-3">
-            <input type="text" class="inputValue" id="inputValue" placeholder="City Search" />
-            <div class="input-group-append">
+            <div class="col-sm-3">
+                <h4 class="search-city-header">Search for a City:</h4>
+                <form class="input-group mb-3">
+                    <input type="text" class="input-value form-control" id="inputValue" placeholder="City Search" />
+                    <div class="input-group-append">
+                        <button class="search-btn btn btn-primary" id="searchButton" type="button">Search</button>
+                    </div>
+                </form>
+                <button class="btn btn-primary mb-3" type="button" id="clearHistory">Clear</button>
+                <form id="recent"></form>
             </div>
-          </form>
-            <form id="recent"></form>
-            </ul>
-          </div>
   
-          <div class="col-sm-9 display">
-            <div class="Current-Weather">
-              <h2 class="City-Date-Icon"></h2>
-              <p class="Temperature"></p>
-              <p class="Humidity"></p>
-              <p class="Wind"></p>
-              <p class="uvi">
-                UV Index:
-                <i class="uviValue"></i>
-              </p>
+            <div class="col-sm-9 display">
+                <div class="current-weather">
+                    <h2 class="city-date-icon"></h2>
+                    <p class="temperature"></p>
+                    <p class="humidity"></p>
+                    <p class="wind"></p>
+                    <p class="uvi">UV Index: <i class="uvi-value"></i></p>
+                </div>
+                
+                <div class="d-flex five-day-forecast">
+                    <h3 class="five-day-header"></h3>
+                    <div id="cards" class="col-12 d-flex"></div>
+                </div>
             </div>
-
-            <div class="d-flex five-day-forecast">
-              <h3 class="fiveDayHeader"></h3>
-              <br/>
-              <div id="cards" class="col-12 d-flex"></div>
-            </div>
-          </div>
         </div>
-      </main>
-    </body>
-
+    </main>
     <script src="./assets/script.js"></script>
 </body>
 </html>
