Update README File

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <i><span class="oi oi-magnifying-glass"></span></i> </button>
         </div>
       </form>
-      <button class="btn btn-primary mb-3" type="button" id="clearHistory">Clear</button>
+      <button class="btn btn-primary mb-3" type="button" id="clearHistory">Clear history</button>
         <form id="recent"></form>
         </ul>
       </div>
